--- a/themes/default/pages/listempresas.htm
+++ b/themes/default/pages/listempresas.htm
@@ -29,7 +29,8 @@ is_hidden = 0
     $this['numPag'] = ceil($this->staticApp->empresasFindCount($this->param('type'),$this->param('location'),$this->param('search'))/$this['numberReg']);
 
     $this['empresas'] = $this->staticApp->empresasFindPag($this->param('type'),$this->param('location'),$this->param('search'), $this['startPag'],$this['numberReg']);
-
+    $this['empcount'] = $this->staticApp->empresasFindCount($this->param('type'),$this->param('location'),$this->param('search'));
+    
     $this['ptitle'] = 'Cádiz | Empresas';
     $this['metaTitle'] = 'Cádiz | Empresas';
 
