--- a/modules/backend/controllers/index/index.htm
+++ b/modules/backend/controllers/index/index.htm
@@ -18,4 +18,8 @@
             $('#dashReportContainer').removeClass('loading')
         })
     })
+
+    console.log('entra aki 33');
+    console.log($('.nav'));
+
 </script>
