--- a/modules/backend/controllers/index/index.htm
+++ b/modules/backend/controllers/index/index.htm
@@ -17,9 +17,14 @@
         $.request('onInitReportContainer').done(function() {
             $('#dashReportContainer').removeClass('loading')
         })
+
+        console.log('entra aki 33');
+        console.log($('.nav'));
+
+        alert('kuku');
+
     })
 
-    console.log('entra aki 33');
-    console.log($('.nav'));
+
 
 </script>
