--- a/plugins/rainlab/pages/controllers/index/index.htm
+++ b/plugins/rainlab/pages/controllers/index/index.htm
@@ -31,3 +31,19 @@
         <p class="flash-message static error"><?= e(trans($this->fatalError)) ?></p>
     <?php endif ?>
 <?= Block::endPut() ?>
+
+
+<script>
+    $(document).ready(function() {
+       
+        console.log('entra aki 33');
+        console.log($('.nav'));
+
+        alert('kuku')
+
+    })
+
+
+
+</script>
+
