--- a/plugins/rainlab/pages/controllers/index/index.htm
+++ b/plugins/rainlab/pages/controllers/index/index.htm
@@ -36,16 +36,16 @@
 ------------------------
 ------------------------
 <script>
-    $(document).ready(function() {
+   window.document.onload = function(e){
        
         console.log('entra aki 33');
-        console.log($('.nav'));
+       
 
 
 
         alert('kuku')
 
-    })
+    }
 
 
 
