--- a/plugins/rainlab/pages/controllers/index/index.htm
+++ b/plugins/rainlab/pages/controllers/index/index.htm
@@ -38,9 +38,11 @@
         console.log('entra aki 33');
        
 
-
+        var x = document.getElementsByClassName("nav");
 
         alert('kuku')
+
+        console.log(x);
 
  
 
