--- a/plugins/rainlab/pages/controllers/index/index.htm
+++ b/plugins/rainlab/pages/controllers/index/index.htm
@@ -39,10 +39,11 @@
        
 
         var x = document.getElementsByClassName("nav");
-
+        var xx = x[0];
         alert('kuku')
 
         console.log(x);
+        console.log(xx);
 
  
 
