--- a/plugins/rainlab/pages/controllers/index/index.htm
+++ b/plugins/rainlab/pages/controllers/index/index.htm
@@ -39,8 +39,8 @@
        
 
         var x = document.getElementsByClassName("nav");
-        var xx = x[0];
-        alert('kuku')
+        var xx = x[1];
+        //alert('kuku')
 
         console.log(x);
         console.log(xx);
