--- a/plugins/rainlab/pages/controllers/index/index.htm
+++ b/plugins/rainlab/pages/controllers/index/index.htm
@@ -38,7 +38,7 @@
         console.log('entra aki 33');
        
 
-        var x = document.getElementsByClassName("nav").child().child();
+        var x = document.getElementsByClassName("nav:nth-child(2)");
         var xx = x[1];
         //alert('kuku')
 
