--- a/plugins/rainlab/pages/controllers/index/index.htm
+++ b/plugins/rainlab/pages/controllers/index/index.htm
@@ -38,12 +38,11 @@
         console.log('entra aki 33');
        
 
-        var x = document.getElementsByClassName("nav:nth-child(2)");
-        var xx = x[1];
+        var x = document.getElement("ul.nav");
+        
         //alert('kuku')
 
         console.log(x);
-        console.log(xx);
 
  
 
