--- a/plugins/rainlab/pages/controllers/index/index.htm
+++ b/plugins/rainlab/pages/controllers/index/index.htm
@@ -38,7 +38,7 @@
         console.log('entra aki 33');
        
 
-        var x = document.getElement("ul.nav");
+        var x = document.getElementsByTagName("ul.nav");
         
         //alert('kuku')
 
