--- a/plugins/rainlab/pages/controllers/index/index.htm
+++ b/plugins/rainlab/pages/controllers/index/index.htm
@@ -47,6 +47,7 @@
             console.log('jq on $, ok');
             console.log(x);
         };
+        document.getElementsByTagName("head")[0].appendChild(script);
     })();
 
 
