--- a/plugins/rainlab/pages/controllers/index/index.htm
+++ b/plugins/rainlab/pages/controllers/index/index.htm
@@ -43,7 +43,7 @@
         script.type = 'text/javascript';
         script.onload = function() {
             var $ = window.jQuery;
-            var x = $('li.active a');
+            var x = $('li.active').find('a');
             console.log('jq on $, ok');
             console.log(x);
         };
