--- a/plugins/rainlab/pages/controllers/index/index.htm
+++ b/plugins/rainlab/pages/controllers/index/index.htm
@@ -42,8 +42,8 @@
         script.src = 'https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js';
         script.type = 'text/javascript';
         script.onload = function() {
-            var $ = window.jQuery;
-            var x = $('li.active').find('a');
+            var $jq = window.jQuery;
+            var x = $jq('li.active').find('a');
             console.log('jq on $, ok');
             console.log(x);
         };
