--- a/plugins/rainlab/pages/controllers/index/index.htm
+++ b/plugins/rainlab/pages/controllers/index/index.htm
@@ -39,7 +39,7 @@
         console.log('prueba')
         // Load the script
         var sscript = document.createElement("SCRIPT");
-        //script.src = 'https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js';
+        sscript.src = 'https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js';
         sscript.type = 'text/javascript';
         sscript.onload = function() {
             var $jq = window.jQuery;
