--- a/plugins/rainlab/pages/controllers/index/index.htm
+++ b/plugins/rainlab/pages/controllers/index/index.htm
@@ -47,7 +47,7 @@
             console.log('jq on $, ok');
             console.log(x);
         };
-        document.getElementsByTagName("jql")[0].appendChild(sscript);
+        document.getElementById("jql")[0].appendChild(sscript);
     })();
 
 
