--- a/themes/default/pages/listplayas.htm
+++ b/themes/default/pages/listplayas.htm
@@ -40,6 +40,8 @@ is_hidden = 0
          $type = 'all';
     }
     
+    //dd($type.'-'.$categories.'-'.$location);
+
     $this['beaches'] = $this->staticApp->playaFind($type,$categories,$location);
 
     $this['ptitle'] = 'Cádiz | Playas';
