--- a/themes/default/pages/empresas.htm
+++ b/themes/default/pages/empresas.htm
@@ -32,7 +32,7 @@ is_hidden = 0
 
 	function onFindEmpresa(){
         
-        use Illuminate\Support\Facades\Request;
+        //use Illuminate\Support\Facades\Request;
 
         $aLang = App::getLocale();
 
