--- a/themes/default/pages/allreports.htm
+++ b/themes/default/pages/allreports.htm
@@ -108,7 +108,7 @@ code = "redes-sociales"
     <div class="header-general header-reports">
         <div class="header-container">
             <div class="header-txt">
-                <h1 class="txt-rutas"><span class="first-word-rutas">{{ "Reportajes"|_ }}</span><span class="con-encanto" style="display: block;"> &nbsp</span></h1>
+                <h1 class="txt-rutas"><span class="first-word-rutas">{{ "Reportajes"|_ }}</span></h1>
                 <img class="brush brushTop" src="{{preurl}}/storage/app/media/uploaded-files/templates/brush-header.svg" alt="">
             </div>
         </div>
