--- a/themes/default/pages/allreports.htm
+++ b/themes/default/pages/allreports.htm
@@ -115,12 +115,11 @@ code = "redes-sociales"
     </div>
     </div>
     
-    <div id='prtlReports' class="all-events">
-        <div class="all-events-container">
+    <div class="all-events">
+        <div id='prtlReports' class="all-events-container">
         {% partial "allreports" %}
         </div>
     </div>
-
     <div id='prtlPagination' class="prtlPaginationPub">
         {% partial "pagination" %}
     </div>
