--- a/themes/default/pages/listpublicaciones.htm
+++ b/themes/default/pages/listpublicaciones.htm
@@ -145,8 +145,8 @@ code = "redes-sociales"
 </div>
 </div>
 
-<div id='prtlPublicationsl' class="all-events">
-  <div class="all-events-container">
+<div  class="all-events">
+  <div id='prtlPublicationsl' class="all-events-container">
     {% partial "publications" %}
   </div>
 </div>
