--- a/themes/default/pages/listempresassector.htm
+++ b/themes/default/pages/listempresassector.htm
@@ -62,6 +62,12 @@ is_hidden = 0
 
         <img class="brush" src="{{preurl}}/storage/app/media/uploaded-files/templates/brush-header.svg" alt="">
     </div>
+    <!-- SEARCH -->
+    <div id='prtlSearch'>
+      <div id ="listEmp">
+        {% partial "site/searchempresa" %}
+      </div>
+    </div>
 
   </div>
 </div>
