--- a/themes/default/pages/listempresassector.htm
+++ b/themes/default/pages/listempresassector.htm
@@ -69,9 +69,11 @@ is_hidden = 0
     } else {
         $search = str_replace(' ','_',$psearch);
     }
+    
+    $this['empcount'] = $this->staticApp->empresasFindCount($type, $ubicacion, $search);
 
-    $empcount = $this->staticApp->empresasFindCount($type, $ubicacion, $search);
-    $empresas = $this->staticApp->empresasFindPag($type,$ubicacion,$search,1,9);
+    //$empcount = $this->staticApp->empresasFindCount($type, $ubicacion, $search);
+    //$empresas = $this->staticApp->empresasFindPag($type,$ubicacion,$search,1,9);
 
     return Redirect::to($aLang.'/empresas-por-sector/'.$type.'/'.$ubicacion.'/'.$search);
 
