--- a/themes/default/pages/listempresassector.htm
+++ b/themes/default/pages/listempresassector.htm
@@ -156,7 +156,7 @@ is_hidden = 0
     <!-- SEARCH -->
     <div id='prtlSearch'>
       <div id ="listEmp">
-        {% partial "site/searchempresa" %}
+        {% partial "site/searchempresab" %}
       </div>
     </div>
 
