--- a/themes/default/pages/listempresassector.htm
+++ b/themes/default/pages/listempresassector.htm
@@ -133,8 +133,8 @@ is_hidden = 0
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
-	$('html, body').animate({
+	/*$('html, body').animate({
 				scrollTop: $(".search-title-container").offset().top
-		}, 2000);
+		}, 2000);*/
 });
 </script>
