Tipo De Intereses Backend . Init

--- a/modules/backend/controllers/catgeventos/_menu.htm
+++ b/modules/backend/controllers/catgeventos/_menu.htm
@@ -62,4 +62,9 @@
         Categorías de rutas
     </a>
 
+    <a href="<?= Backend::url('backend/tipospublicaciones') ?>" >
+        <img src="/modules/backend/assets/images/tpublicaciones.svg" alt="">
+        Tipos de publicaciones
+    </a>
+
 </div>
