Tipo De Intereses Backend . 1

--- a/modules/backend/controllers/tipospublicaciones/create.htm
+++ b/modules/backend/controllers/tipospublicaciones/create.htm
@@ -72,7 +72,7 @@
                             <?= e(trans('backend::lang.form.create_and_close')) ?>
                         </button>
                         <span class="btn-text">
-                            <!-- <?= e(trans('backend::lang.form.or')) ?> --> <a href="<?= Backend::url('backend/tiposintereses') ?>">Volver</a>
+                            <!-- <?= e(trans('backend::lang.form.or')) ?> --> <a href="<?= Backend::url('backend/tipospublicaciones') ?>">Volver</a>
                         </span>
                     </div>
                 </div>
