--- a/modules/backend/controllers/tipospublicaciones/update.htm
+++ b/modules/backend/controllers/tipospublicaciones/update.htm
@@ -76,14 +76,14 @@
                             <?= e(trans('backend::lang.form.save_and_close')) ?>
                         </button>
                         <span class="btn-text">
-                            <!-- <?= e(trans('backend::lang.form.or')) ?> --><a href="<?= Backend::url('backend/tiposintereses') ?>">Volver</a>
+                            <!-- <?= e(trans('backend::lang.form.or')) ?> --><a href="<?= Backend::url('backend/tipospublicaciones') ?>">Volver</a>
                         </span>
                         <button
                             type="button"
                             class="oc-icon-trash-o btn-icon danger pull-right"
                             data-request="onDelete"
                             data-load-indicator="<?= e(trans('backend::lang.form.deleting')) ?>"
-                            data-request-confirm="¿Eliminar este tipo de visita de experiencias?">
+                            data-request-confirm="¿Eliminar este tipo de interes de publicaciones?">
                         </button>
                     </div>
                 </div>
@@ -107,7 +107,7 @@
         </div>
         <div class="padded-container">
             <p class="flash-message static error"><?= e(trans($this->fatalError)) ?></p>
-            <p><a href="<?= Backend::url('backend/tiposintereses') ?>" class="btn btn-default"><?= e(trans('backend::lang.user.return')) ?></a></p>
+            <p><a href="<?= Backend::url('backend/tipospublicaciones') ?>" class="btn btn-default"><?= e(trans('backend::lang.user.return')) ?></a></p>
         </div>
     <?php endif ?>
 
