Tipo De Intereses Backend . 3

--- a/modules/backend/controllers/tipospublicaciones/_list_toolbar.htm
+++ b/modules/backend/controllers/tipospublicaciones/_list_toolbar.htm
@@ -1,5 +1,5 @@
 <div data-control="toolbar">
     <a href="<?= Backend::url('backend/tipospublicaciones/create') ?>" class="btn btn-primary oc-icon-plus">
-        Nuevo tipo de publicación
+        Nuevo tipo de interés
     </a>
 </div>
