Tipo De Intereses Backend . 3

--- a/modules/backend/controllers/tipospublicaciones/_menu.htm
+++ b/modules/backend/controllers/tipospublicaciones/_menu.htm
@@ -47,7 +47,7 @@
         Intereses de experiencias
     </a>
 
-    <a href="<?= Backend::url('backend/tiposvisitas') ?>" style="opacity: 0.5" >
+    <a href="<?= Backend::url('backend/tiposvisitas') ?>" >
         <img src="/modules/backend/assets/images/tvisitas.svg" alt="">
         Tipos de visita
     </a>
@@ -62,7 +62,7 @@
         Categorías de rutas
     </a>
 
-    <a href="<?= Backend::url('backend/tipospublicaciones') ?>" >
+    <a href="<?= Backend::url('backend/tipospublicaciones') ?>" style="opacity: 0.5" >
         <img src="/modules/backend/assets/images/tpublicaciones.svg" alt="">
         Tipos de publicaciones
     </a>
