--- a/themes/default/pages/listpublicaciones.htm
+++ b/themes/default/pages/listpublicaciones.htm
@@ -74,10 +74,10 @@ code = "redes-sociales"
 
     return Redirect::to($aLang.'/listado-de-publicaciones/'.$search.'/'.$type.'/'.$interests.'/'.$lang);
 
-    return [
+    /*return [
         '#prtlPublicationsl' => $this->renderPartial('publications'),
         '#prtlPagination' => $this->renderPartial('pagination')
-    ];
+    ];*/
 
   }
 
