--- a/themes/default/pages/listempresas.htm
+++ b/themes/default/pages/listempresas.htm
@@ -38,6 +38,7 @@ is_hidden = 0
 
 	function onFindEmpresa(){
 
+    $aLang = App::getLocale();
 
     $type = $_POST['type'];
     if (isset($_POST['location'])){
@@ -52,9 +53,6 @@ is_hidden = 0
       $ubicacion = 'todos-los-municipios';
     }
 
-
-
-
     if($psearch == ''){
         $search = 'todas-las-empresas';
     } else {
@@ -67,6 +65,8 @@ is_hidden = 0
     $this['empresas'] = $this->staticApp->empresasFindPag($type,$ubicacion,$search,$this['startPag'],$this['numberReg']);   
     $this['empcount'] = $this->staticApp->empresasFindCount($type, $ubicacion, $search);
     $this['numPag'] = ceil($this->staticApp->empresasFindCount($type,$ubicacion,$search)/$this['numberReg']);
+
+    return Redirect::to($aLang.'/listado-de-empresas/'.$type.'/'.$ubicacion.'/'.$search);
 
     return [
         '#prtlEmpresasl' => $this->renderPartial('empresas'),
@@ -119,9 +119,11 @@ is_hidden = 0
 </div>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript">
+
 $(document).ready(function() {
 	$('html, body').animate({
 				scrollTop: $(".search-title-container").offset().top
 		}, 2000);
 });
+
 </script>
